<resources>
    <string name="app_name">ClubMoy</string>
    <string name="enter_email_address_register">Enter Email Address</string>
    <string name="enter_password_register">Enter Password</string>
    <string name="register">Register</string>
    <string name="already_signed_up_sign_in_here">Already signed up? Sign in here</string>
    <string name="enter_email_address_login">Enter Email Address</string>
    <string name="enter_password_login">Enter Password</string>
    <string name="login">Login</string>
    <string name="havent_an_account_sign_up_here">Already signed up? Sign in here</string>
    <string name="title_activity_training">Training</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="play_video">Play Video</string>
    <string name="title_activity_maps">Map</string>
    <string name="login2">Login</string>
    <string name="not_string_havent_an_account_sign_up_here">not @string/havent_an_account_sign_up_here</string>
    <string name="not_have_an_account_sign_up_here">Not have an account? Sign up here!</string>
    <string name="bookFacilities">Book</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="hh_mm">HH:MM</string>
    <string name="facilitiesName">Enter Name</string>
    <string name="search">Name</string>
    <string name="search_bookings">Search Bookings</string>
    <string name="nSearch">Declan Conroy</string>
    <string name="dSearch">28-05-2018</string>
    <string name="facSearch">Gym</string>
    <string name="tSearch">18:45</string>
    <string name="membershp_amount">Membershp Amount</string>
    <string name="pay_now">Pay Now</string>
    <string name="enter_amount_00_00">Enter Amount £00.00</string>
    <string name="txtId">TextView</string>
    <string name="textAmount">TextView</string>
    <string name="txtStatus">TextView</string>
    <string name="macavoy">macavoy</string>
    <string name="seancavco">seancavco</string>
    <string name="moywaymotors">moywaymotors</string>
    <string name="lynas">lynas</string>
    <string name="moyauto">moyauto</string>
    <string name="westland">westland</string>
    <string name="imageview">imageView</string>
    <string name="moyRegistration">crest</string>
    <string name="moylogin">moyLogin</string>
    <string name="booking">booking</string>
    <string name="money">money</string>
    <string name="calendar">calendar</string>
    <string name="location">location</string>
    <string name="logout">logout</string>
    <string name="football">football</string>
    <string name="homepageTb">homepage</string>
    <string name="moneyTb">moneyPage</string>
    <string name="sponsortoolbar">sponsorToolbar</string>
    <string name="youtubetoolbar">youtubetoolbar</string>
    <string name="footballtoolbar">footballToolbar</string>
    <string name="calendartoolbar">calendarToolbar</string>
    <string name="logouttoolbar">logoutToolbar</string>
    <string name="pay_membership">Pay Membership</string>
    <string name="calendarHp">Calendar</string>
    <string name="training_match_fixtures">Training/Match FIxtures</string>
    <string name="sponsorsHp">sponsors</string>
    <string name="facilities_booking">Facilities Booking</string>
    <string name="sponsorIcon">Sponsor</string>
    <string name="a_year_of_champions">A year of Champions</string>
    <string name="lgot">Logout</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="pay_yearly_membership">Pay Yearly Membership</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="all_ireland_champions_2018">All Ireland Champions 2018</string>
    <string name="toDoD">TODO</string>
    <string name="please_use_the_below_form_to_pay_your_membership_for_2018_the_amount_is_25_00">Please use the below Form to pay your membership for 2018. The amount is: £25.00</string>
    <string name="sponsorsLogo">Sponsors</string>
    <string name="calendarLogo">Calendar</string>
    <string name="payment_details">Payment Details</string>
    <string name="book21">book</string>
    <string name="training_times">Training Times</string>
    <string name="match_fixtures_text">Match Fixtures</string>
    <string name="mffootball">mffootball</string>
    <string name="match_fixtures">Match Fixtures</string>
    <string name="training">Training</string>
    <string name="trainFootball">TODO</string>
    <string name="twentyFive">25.00</string>
    <string name="_25_00">25.00</string>
    <string name="facility_bookings_view">Facility Bookings</string>
    <string name="fac_todo">TODO</string>

    <array name="facilitiesOptions">
        <item>Gym</item>
        <item>Training Pitch</item>
        <item>Football Pitch</item>
        <item>Board Room</item>
    </array>
</resources>
