<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Homepage">


    <ViewFlipper
        android:id="@+id/v_flipper"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp">

    </ViewFlipper>

    <ImageView
        android:id="@+id/bookingImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="201dp"
        android:layout_marginStart="17dp"
        android:contentDescription="@string/booking"
        app:srcCompat="@drawable/booking" />

    <ImageView
        android:id="@+id/moneyImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/bookingImage"
        android:layout_marginBottom="142dp"
        android:contentDescription="@string/money"
        app:srcCompat="@drawable/membership" />

    <ImageView
        android:id="@+id/calendarImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/bookingImage"
        android:layout_marginBottom="81dp"
        android:contentDescription="@string/calendar"
        app:srcCompat="@drawable/calendar" />


    <ImageView
        android:id="@+id/football"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/moneyImage"
        android:layout_marginEnd="121dp"
        android:contentDescription="@string/football"
        app:srcCompat="@drawable/football" />

    <ImageView
        android:id="@+id/logoutImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/football"
        android:layout_alignTop="@+id/youtubeImage"
        android:contentDescription="@string/logout"
        app:srcCompat="@drawable/logout" />

    <TextView
        android:id="@+id/bookingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="211dp"
        android:layout_marginStart="85dp"
        android:text="@string/facilities_booking" />

    <TextView
        android:id="@+id/payMembership"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/bookingText"
        android:layout_marginBottom="155dp"
        android:text="@string/pay_membership" />

    <TextView
        android:id="@+id/calendarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/bookingText"
        android:layout_marginBottom="100dp"
        android:text="@string/calendarHp" />

    <TextView
        android:id="@+id/footballText"
        android:layout_width="103dp"
        android:layout_height="42dp"
        android:layout_alignBottom="@+id/moneyImage"
        android:layout_alignParentEnd="true"
        android:text="@string/training_match_fixtures" />

    <TextView
        android:id="@+id/logoutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/footballText"
        android:layout_marginBottom="43dp"
        android:text="@string/lgot" />

    <ImageView
        android:id="@+id/youtubeImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/football"
        android:layout_alignTop="@+id/bookingImage"
        app:srcCompat="@drawable/youtube"
        android:contentDescription="@string/todo1" />

    <ImageView
        android:id="@+id/sponsorImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/football"
        android:layout_alignTop="@+id/calendarImage"
        android:contentDescription="@string/sponsorsHp"
        app:srcCompat="@drawable/sponsoredby" />

    <TextView
        android:id="@+id/sponsorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/footballText"
        android:layout_alignTop="@+id/calendarText"
        android:text="@string/sponsorIcon" />

    <TextView
        android:id="@+id/champions"
        android:layout_width="102dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/bookingText"
        android:layout_marginTop="-19dp"
        android:text="@string/a_year_of_champions" />

    <ImageView
        android:id="@+id/logoutHp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/football"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/logout"
        android:contentDescription="@string/todo" />
</RelativeLayout>